  . support for parsing ISO intervals for use with DateInterval.
  . date_add() / DateTime::add(), date_sub() / DateTime::sub() for applying an
    interval to an existing date/time.
  . proper support for "this week", "previous week"/"last week" and "next week"
    phrases so that they actually mean the week and not a seven day period
    around the current day.

- Added functionality to SPL extension:
  . Added SPL to list of standard extensions that cannot be disabled. (Marcus)
  . Added ability to store associative information with objects in
    SplObjectStorage. (Marcus)
  . Added ArrayAccess support to SplObjectStorage. (Marcus)
  . Added SplDoublyLinkedList, SplStack, SplQueue classes. (Etienne)
  . Added FilesystemIterator. (Marcus)
  . Added GlobIterator. (Marcus)
  . Added SplHeap, SplMinHeap, SplMaxHeap, SplPriorityQueue classes. (Etienne)
- Added ReflectionProperty::setAccessible() method that allows non-public
  property's values to be read through ::getValue(). (Derick)
- Added ability to use Traversable objects instead of plain arrays in ext/soap.
  (Joshua Reese, Dmitry)
- Added msg_queue_exists() function. (Benjamin Schulz)
- Added 3 Firebird specific attributes that can be set via PDO::setAttribute()
  to control formatting of date/timestamp columns: PDO::FB_ATTR_DATE_FORMAT,
  PDO::FB_ATTR_TIME_FORMAT and PDO::FB_ATTR_TIMESTAMP_FORMAT. (Lars W)
- Added gmp_testbit() function from HEAD. (Stas)
- Added icon format support to getimagesize(). (Scott)
- Added LDAP_OPT_NETWORK_TIMEOUT option for ldap_set_option() to allow
  setting network timeout (FR #42837). (Jani)
- Added optional escape character parameter to fgetcsv(). (David Soria Parra)
- Added an optional parameter to strstr() and stristr() for retrieval of either
  the part of haystack before or after first occurrence of needle.
  (Johannes, Felipe)
- Added xsl->setProfiling() for profiling stylesheets. (Christian)
- Added long-option feature to getopt() and made getopt() available also on